# cpp-project-template

./: CMakeLists.txt  CMakePresets.json  README.md
app/: CMakeLists.txt
cmake/: CompilerWarnings.cmake  FindTestTools.cmake  GtestTools.cmake  Sanitizers.cmake
scripts/: check_format.sh
tests/: CMakeLists.txt
tests/scripts/: check_format.sh
tests/static/: CMakeLists.txt
